# lahaina-climate-risk

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPO_QC_REPORT.md  Snakefile  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  methodology_question.md
.github/workflows/: ci.yml
benchmarks/: scm_benchmark.py
data/raw/parcels/: maui_assessor.csv
data/raw/wui/: wui_conus.dbf  wui_conus.shp  wui_conus.shx
docs/: AUDIT_LOG.md  DATA_SOURCES.md  LITERATURE_IDENTIFICATION.md  LITERATURE_SPATIAL.md  LITERATURE_THEORY.md  METHODOLOGY_NOTES.md  NEXT_STEPS_ANALYSIS.md  NEXT_STEPS_DATA.md  NEXT_STEPS_PAPER.md  OUTCOME_BUG_REPORT.md  PHASE1_CHECKLIST.md  PHASE2_BUG_REPORT.md  PHASE2_CHECKLIST.md  PHASE3_CHECKLIST.md  READING_LIST.md  ROADMAP.md  SDM_BUG_REPORT.md  api_reference.md  data_acquisition.md  replication_guide.md
notebooks/: 01_phase1_eda.ipynb  02_phase2_scm.ipynb
paper/: Makefile  main.tex  references.bib
scripts/: generate_api_docs.py
src/api/: app.py  db.py  schemas.py
src/esda/: lisa.py  morans.py
src/gwr/: bandwidth.py  gwr_model.py
src/inference/: loo.py  placebo.py  rmspe.py
src/ingest/: __init__.py  census_acs.py  exceptions.py  fire.py  fred.py  hta_tourism.py  parcel.py  redfin.py  wui.py  zillow_zip.py  zip_panel_builder.py
src/models/: did_cs.py  hedonic.py  parallel_trends.py  triple_diff.py
src/outputs/: scm_plots.py  scm_tables.py  spatial_plots.py  spatial_tables.py  tables.py
src/scm/: adh_scm.py  augsynth.py  covariate_matrix.py  donor_pool.py  gsynth.py  model_registry.py
src/spatial/: distance_bands.py  h3_grid.py  panel_builder.py  weights.py  weights_phase3.py
src/spatial_models/: effects.py  model_registry.py  outcome.py  sar.py  sdm.py  sem.py
tests/: test_census_acs.py  test_redfin.py  test_redfin_smoke.py
tests/adversarial/: test_edge_cases_gwr.py  test_edge_cases_sar.py  test_edge_cases_scm.py
tests/api/: test_app.py  test_schemas.py  test_security.py
tests/esda/: test_lisa.py  test_morans.py
tests/fixtures/: redfin_sample.tsv
tests/gwr/: test_bandwidth.py  test_gwr_model.py
tests/inference/: test_loo.py  test_placebo.py  test_rmspe.py
tests/ingest/: test_census_acs.py  test_fire.py  test_fred.py  test_hta_tourism.py  test_parcel.py  test_wui.py  test_zillow_zip.py  test_zip_panel_builder.py
tests/models/: test_did_cs.py  test_hedonic.py  test_parallel_trends.py  test_triple_diff.py
tests/numerical_validation/: conftest.py  validate_sar_sem.py
tests/outputs/: test_spatial_tables.py
tests/properties/: test_gwr_properties.py  test_scm_properties.py  test_spatial_properties.py
tests/scm/: test_adh_scm.py  test_augsynth.py  test_covariate_matrix.py  test_donor_pool.py  test_gsynth.py  test_model_registry.py  test_scm_plots.py  test_scm_tables.py
tests/spatial/: test_distance_bands.py  test_h3_grid.py  test_panel_builder.py  test_weights.py  test_weights_phase3.py
tests/spatial_models/: test_effects.py  test_outcome.py  test_sar.py  test_sdm.py  test_sem.py
