[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lahaina-climate-risk"
version = "0.1.0"
description = "Phase 1: Hedonic pricing, staggered DiD, and spatial analysis of 2023 Lahaina wildfire climate risk"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "linearmodels>=6.0",
    "csdid>=0.1.0",
    "drdid>=0.1.0",
    "pysal>=23.7",
    "libpysal>=4.9.0",
    "spreg>=1.4.0",
    "h3>=3.7.0",
    "shapely>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandera>=0.17.0",
    "python-dotenv>=1.0.0",
    "snakemake>=8.0.0",
    "cvxpy>=1.4",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "plotly>=5.17.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
rpy2 = [
    "rpy2>=3.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src"]
