[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lahaina-climate-risk"
version = "1.0.0"
description = """\
Econometric pipeline for climate tail-risk pricing following the 2023 Lahaina wildfire. \
Implements staggered DiD (Callaway-Sant'Anna), synthetic control (ADH, GSynth, ASCM), \
and spatial econometrics (SAR, SEM, SDM, GWR) from scratch in Python.\
"""
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "[Author Name]", email = "[email]"}]
keywords = [
    "synthetic control",
    "difference-in-differences",
    "spatial econometrics",
    "geographically weighted regression",
    "climate risk",
    "natural disaster",
    "causal inference",
    "Lahaina",
    "wildfire",
    "real estate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "linearmodels>=6.0",
    "csdid>=0.1.0",
    "drdid>=0.1.0",
    "pysal>=23.7",
    "libpysal>=4.9.0",
    "esda>=2.5",
    "mgwr>=2.2",
    "spreg>=1.6",
    "scipy>=1.11.0",
    "h3>=3.7.0",
    "shapely>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandera>=0.17.0",
    "python-dotenv>=1.0.0",
    "snakemake>=8.0.0",
    "cvxpy>=1.4",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "clickhouse-driver>=0.2.7",
    "folium>=0.15.0",
    "mapclassify>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
numba = [
    "numba>=0.59.0",
]
rpy2 = [
    "rpy2>=3.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src"]
